# M.A.D

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
crates/mad-cli/: Cargo.toml
crates/mad-cli/src/: main.rs
crates/mad-core/: Cargo.toml
crates/mad-core/src/: error.rs  evaluation.rs  lib.rs  pillar.rs  policy.rs  pricing.rs  scoring.rs  value_stream.rs  vendor.rs  vendor_doc.rs  vendor_set.rs  workspace.rs  workspace_bundle.rs
crates/mad-core/src/report/: html.rs  html_interactive.rs  locale.rs  mod.rs  pdf.rs  vendor_doc.rs  vsm.rs
crates/mad-core/src/report/assets/: mad-report-interactive.js
crates/mad-server/: Cargo.toml
crates/mad-server/src/: main.rs  workspace_store.rs
docs/: TECHNICAL_REPORT.md
policies/: mad-standard.yaml
