[workspace]
resolver = "2"
members = [
    "crates/mad-core",
    "crates/mad-cli",
    "crates/mad-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["MAD (Mobile Assessment & Defense)"]

[workspace.dependencies]
mad-core = { path = "crates/mad-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
