[package]
name = "mad-core"
description = "Core policy definitions and MDM vendor evaluation engine for Operation M.A.D."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
base64 = "0.22"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3"
