[package]
name = "mad-server"
description = "HTTP API server for the Operation M.A.D. evaluation platform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "mad-server"
path = "src/main.rs"

[dependencies]
mad-core.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
